// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzpkqZ bWMJwn"
>
  <li
    className="sc-fznAgC hpTQDf"
    onClick={[Function]}
  >
    <span
      className="sc-fzqMAW krojpy"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznAgC hpTQDf"
    onClick={[Function]}
  >
    <span
      className="sc-fzqMAW krojpy"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznAgC hpTQDf"
    onClick={[Function]}
  >
    <span
      className="sc-fzqMAW krojpy"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzpkqZ bWMJwn"
>
  <li
    className="sc-fznAgC gLWVWD"
    onClick={[Function]}
  >
    <span
      className="sc-fzqMAW krojpy"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznAgC gLWVWD"
    onClick={[Function]}
  >
    <span
      className="sc-fzqMAW krojpy"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznAgC gLWVWD"
    onClick={[Function]}
  >
    <span
      className="sc-fzqMAW krojpy"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
